--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="50dp"
-        android:background="@drawable/baseline_dashboard_black_24dp"
+        android:background="@drawable/gruiker_symbol"
         android:layout_gravity="left"/>
 
     <TextView
