--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -28,9 +28,9 @@
         android:id="@+id/currentLanguageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cochon\n"
-        android:textSize="20sp"
         android:layout_gravity="left"
-        android:layout_marginLeft="15dp"/>
+        android:layout_marginLeft="15dp"
+        android:text="Animal\n"
+        android:textSize="20sp" />
 
 </LinearLayout>
