--- a/app/src/main/res/layout/fragment_languages.xml
+++ b/app/src/main/res/layout/fragment_languages.xml
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/languages_selector" />
 
     <EditText
-        android:id="@+id/editText_languageend"
+        android:id="@+id/editText_ending"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -52,10 +52,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_languagemiddle" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_middle" />
 
     <EditText
-        android:id="@+id/editText_languagebeginning"
+        android:id="@+id/editText_beginning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -65,10 +65,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_languagename" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_name" />
 
     <EditText
-        android:id="@+id/editText_languagemiddle"
+        android:id="@+id/editText_middle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -77,10 +77,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_languagebeginning" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_beginning" />
 
     <EditText
-        android:id="@+id/editText_languagename"
+        android:id="@+id/editText_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -93,7 +93,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView_create_language" />
 
     <EditText
-        android:id="@+id/editText_languagecolor"
+        android:id="@+id/editText_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -102,7 +102,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_languageend" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_ending" />
 
     <Spinner
         android:id="@+id/languages_selector"
@@ -120,7 +120,7 @@
         android:layout_marginStart="60dp"
         android:text="Ajouter"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_languagecolor" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_color" />
 
     <Button
         android:id="@+id/del_button"
@@ -133,6 +133,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.906"
         app:layout_constraintStart_toEndOf="@+id/add_button"
-        app:layout_constraintTop_toBottomOf="@+id/editText_languagecolor" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_color" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
